--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ a:hover::before {
     <center><img src="imag.png"></center>
     <div class="container block">
         <ul style="list-style:none;">
-            <li><a href="CapstoneProject\education website design\index.html">Capstone Project</a></li>
+            <li><a href="CapstoneProject/education website design/index.html">Capstone Project</a></li>
             <li><a href="Travel\index.html">TASK 1 :[Travel Agency]</a></li>
             <li><a href="Symposium\index.html">TASK 2 :[Science Symposium]</a></li>
             <li><a href="Register\register.html">TASK 3 :[Registration Form]</a></li>
